2003-08-05  Not Zed  <NotZed@Ximian.com>

	** See bug #47224.  Hook onto clicked rather than button_pressed,
	so that dnd works.
	
	* mail-display.c (inline_toggle): toggle a part inline.
	(button_press): change back to only handle button clicked events,
	renamed to inline_button_clicked.
	(do_attachment_header): hook onto clicked rather than
	button_press_event, and move key_press_event to
	inline_button_pressed.
	(do_signature): Same.
	(inline_button_pressed): handle inline button key press event
	explicitly.

2003-07-29  Not Zed  <NotZed@Ximian.com>

	* mail-folder-cache.c (mail_note_store): add a CamelOperation for
	overriding status handler.

	* mail-send-recv.c (receive_update_got_store): Pass our own cancel
	handle to get_folderinfo and mail_note_store.
	(mail_send_receive, mail_receive_uri): Same for get_store.

	* mail-ops.c (mail_get_store, mail_get_folderinfo): Add a
	CamelOperation argument, for overriding the status handler.  Fixed
	most calles to pass NULL to use the default.

2003-08-01  Yuedong Du  <yuedong.du@sun.com>

	* message-browser.c: (on_key_press): close mail message window
	using 'ESC' key, fix bug #47087
                                                                                
2003-07-29  Dan Winship  <danw@ximian.com>

	* mail-display.c (pixbuf_for_mime_type): Gone
	(pixbuf_gen_idle): Use e_icon_for_mime_type instead.

2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>

	* message-browser.c (on_key_press): New callback function to
	override the behaviour of hitting the Delete key. Fixes bug
	#45597.

2003-07-15  Federico Mena Quintero  <federico@ximian.com>

	* folder-browser.c (message_list_drag_data_received): Handle
	invalid URIs, or more likely, the last empty element in a URI list
	--- g_strsplit() will yield { "uri1", "", NULL }.  Fixes #46398.

	* component-factory.c (destination_folder_handle_drop): Likewise.

2003-07-11  Antonio Xu  <antonio.xu@sun.com>

	* folder-browser-ui.c: Change the EditPaste mask to IS_0MESSAGE so